# winiswin

./: .env.example  .gitignore  .replit  ACCOUNT_INFO_EXPLANATION.md  ALL_PAIRS_DEPLOYMENT_GUIDE.md  API_CONNECTION_TEST_REPORT.md  ARCHITECTURE_V3.md  CHECK_RAILWAY_VERSION.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_QUICK_START.md  DEPLOYMENT_REQUIRED.md  DEPLOYMENT_SUMMARY.md  DEPLOY_COMMANDS.sh  DEPLOY_INSTRUCTIONS.md  DEPLOY_NEW_SYSTEM.md  DEPLOY_NOW.md  DEPLOY_V32_TO_RAILWAY.md  DISCORD_COMMANDS_GUIDE.md  DISCORD_HEARTBEAT_FIX.md  DISCORD_NOTIFICATIONS_GUIDE.md  ENVIRONMENT_VARIABLES.txt  LIVE_TRADING_ENABLED.md  LOG_STATUS_CHECK.md  NIXPACKS_FINAL_FIX.md  OPTIMIZATION_COMPLETE.md  POSITION_SYNC_ISSUE.md  PRODUCTION_SETUP.md  Procfile  QUICK_FIX.md  QUICK_START.md  RAILWAY_AUTO_FIX.md  RAILWAY_BUILD_FIX.md  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_DEPLOY_NOW.md  RAILWAY_ERROR_FIX.md  RAILWAY_MANUAL_DEPLOY.md  RAILWAY_SETUP.md  README.md  README_DEPLOYMENT.md  START_DEPLOYMENT.md  (+36 more)
attached_assets/: Pasted--15-K-TALib-Winiswin-Winiswin-v3-0-15-K--1761294128663_1761294128664.txt  Pasted--File-app-discord-bot-py-line-4-in-module-Traceback-most-recent-call-last-import--1761204760088_1761204760088.txt  Pasted--URL-Binance-API-xAI-API-Grok-4--1761135293187_1761135293188.txt  Pasted--winiswin-v2-0-1--1761275792093_1761275792094.txt  Pasted--winiswin-v2-0-1-strategies-ict-smc-py-OB--1761278115927_1761278115927.txt  Pasted--winiswin-v2-0-v3-0-API--1761366835568_1761366835570.txt  (+13 more)
core/: __init__.py  cache_manager.py  circuit_breaker.py  rate_limiter.py
docs/: PROJECT_ROADMAP.md  (+9 more)
(+65 files in other folders)
