[project]
name = "crypto-trading-bot"
version = "2.0.0"
description = "Optimized cryptocurrency trading bot with ICT/SMC strategies"
requires-python = ">=3.11"
dependencies = [
    "python-binance==1.0.19",
    "discord.py==2.3.2",
    "pandas==2.1.4",
    "numpy==1.26.3",
    "python-dotenv==1.0.0",
    "requests==2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
